<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryText">

    <EditText
        android:id="@+id/dn_usuario_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_usuario"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/dn_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_contrasena"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/dn_nuevo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_crear"
        style="@style/AppTheme.Button"
        android:layout_marginTop="10dp"/>



    <Button
        android:id="@+id/dn_cancelar_button"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancelar"
        android:layout_marginTop="10dp"/>
</LinearLayout>