<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_guardar_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/button_guardar"
        style="@style/AppTheme.ButtonDialog"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_noguardar_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ignorar"
        style="@style/AppTheme.ButtonDialog"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button_guardar_alert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_cancelar_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancelar"
        style="@style/AppTheme.ButtonDialog"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/button_noguardar_alert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>