<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.transmilenio.transmisurvey.activites.ContinuarEncuestaActivity">

    <TextView
        android:id="@+id/coe_hora_paso_view"
        style="@style/AppTheme.Encabezado"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/txt_continuar_encuesta"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/coe_si_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Si"
        style="@style/AppTheme.ButtonOpciones"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/coe_hora_paso_view"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/coe_no_button"
        style="@style/AppTheme.ButtonOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_No"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/coe_si_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
