<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transmilenio.transmisurvey.activites.CreacionUsuariosActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        style="@style/AppTheme.Encabezado"
        android:text="@string/txt_gestion_usuarios"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/nu_nuevo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_nuevo"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorSecondaryLigth"
        android:textColor="@color/colorTextButton"/>

    <Button
        android:id="@+id/nu_eliminar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eliminar_todo"
        android:layout_alignBaseline="@+id/nu_nuevo_button"
        android:layout_alignBottom="@+id/nu_nuevo_button"
        android:layout_toRightOf="@+id/nu_nuevo_button"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorSecondaryLigth"
        android:textColor="@color/colorTextButton"/>

    <LinearLayout android:id="@+id/nu_usuario_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nu_nuevo_button"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/nu_user_textView"
            style="@style/AppTheme.Encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/hint_usuario" />

        <EditText
            android:id="@+id/nu_user_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/nu_pass_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_contrasena"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            style="@style/AppTheme.Encabezado"/>

        <EditText
            android:id="@+id/nu_pass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/nu_crear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_crear"
            android:background="@color/colorSecondaryLigth"
            android:textColor="@color/colorTextButton"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</RelativeLayout>
