<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transmilenio.transmisurvey.activites.OrigenDestinoActivity">

    <Button
        android:id="@+id/ode_continuar_button"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/continuar" />

    <TextView
        android:id="@+id/tituloPanel"
        style="@style/AppTheme.Banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoBase"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/tituloPanel">

        <TextView
            android:id="@+id/ode_fecha_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            style="@style/AppTheme.Encabezado"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ode_fecha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignBaseline="@+id/ode_fecha_textView"
            android:layout_alignBottom="@+id/ode_fecha_textView"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp" />

        <TextView
            android:id="@+id/ode_diaSemana_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/diaSemana"
            style="@style/AppTheme.Encabezado"
            android:layout_below="@+id/ode_fecha_textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ode_dia_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ode_diaSemana_text"
            android:text=""
            android:layout_alignLeft="@+id/ode_fecha_text"
            android:layout_alignStart="@+id/ode_fecha_text" />

        <TextView
            android:id="@+id/ode_estacion_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Encabezado"
            android:layout_marginTop="24dp"
            android:text="@string/estacion"
            android:layout_below="@+id/ode_diaSemana_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/ode_estacion_sepinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/ode_estacion_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</RelativeLayout>
